; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_filter-basic.c_close_endstream.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_filter-basic.c_close_endstream.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.endstream_filter = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @close_endstream to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @close_endstream(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.endstream_filter*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.endstream_filter*
  store %struct.endstream_filter* %7, %struct.endstream_filter** %5, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = load %struct.endstream_filter*, %struct.endstream_filter** %5, align 8
  %10 = getelementptr inbounds %struct.endstream_filter, %struct.endstream_filter* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @fz_drop_stream(i32* %8, i32 %11)
  %13 = load i32*, i32** %3, align 8
  %14 = load %struct.endstream_filter*, %struct.endstream_filter** %5, align 8
  %15 = call i32 @fz_free(i32* %13, %struct.endstream_filter* %14)
  ret void
}

declare dso_local i32 @fz_drop_stream(i32*, i32) #1

declare dso_local i32 @fz_free(i32*, %struct.endstream_filter*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
